--- a/style.css
+++ b/style.css
@@ -10,3 +10,7 @@
     margin-top: 2%;
     margin-right: 0.9%;
 }
+.body{
+    /* background-color: blueviolet; */
+    background-image: linear-gradient(45deg,rgb(169, 72, 176),rgb(91, 48, 132));
+}
