--- a/style.css
+++ b/style.css
@@ -4,13 +4,28 @@
 }
 
 .heros-back{
-    text-align: right;
+    width: 30%;
+    height: 50%;
+    border: 1px solid wheat;
 }
 .backimg{
     margin-top: 2%;
     margin-right: 0.9%;
 }
-.body{
-    /* background-color: blueviolet; */
-    background-image: linear-gradient(45deg,rgb(169, 72, 176),rgb(91, 48, 132));
+.logBody, .rbody, .landingBody{
+    /* background-color: logBody; */
+    
+    background-image: linear-gradient(45deg,rgb(8 76 148),rgb(91, 48, 132));
+}
+.lk, #navbarNavAltMarkup{
+    text-decoration: none; 
+    color: aliceblue;"
+  
+}
+.MainForm{
+    width: 100%;
+    height: 100%;
+}
+.rform{
+    width: 100%;
 }
