--- a/style.css
+++ b/style.css
@@ -14,18 +14,19 @@
 }
 .logBody, .rbody, .landingBody{
     /* background-color: logBody; */
-    
+    text-align: center;
     background-image: linear-gradient(45deg,rgb(8 76 148),rgb(91, 48, 132));
 }
 .lk, #navbarNavAltMarkup{
     text-decoration: none; 
-    color: aliceblue;"
+    color: aliceblue;
   
 }
 .MainForm{
     width: 100%;
-    height: 100%;
+    height: 93vh;
 }
+
 .rform{
     width: 100%;
 }
